<!--
  ~ Copyright 2019 Korbinian Moser
  ~
  ~ Licensed under the BSD 3-Clause License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/BSD-3-Clause
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Simple Sudoku</string>
    <string name="load_game">Load Game</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="title_activity_menu">Sudoku</string>
    <string name="no_valid_savefile">There is no saved sudoku</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="set_difficulty">Set difficulty</string>
    <string name="game_settings">Game settings</string>
    <string name="about_app">About</string>
    <string name="summary_about">A simple and straightforward Sudoku App</string>
    <string name="about_version">Version</string>
    <string name="about_send_feedback_title">Send feedback</string>
    <string name="about_send_feedback_summary">Have any questions or problems? Let me know.</string>
    <string name="key_send_feedback">send_feedback</string>
    <string name="about_send_feedback_link"><![CDATA[mailto:korbi@korbinian-moser.de subject="simple Sudoku feedback"]]></string>
    <string name="about_version_key">version_key</string>
    <string name="about_rate_app_key">rate_app</string>
    <string name="about_rate_app_summary">Give the app 5 stars if you like it.</string>
    <string name="about_rate_app_title">Rate the app!</string>
    <string name="game_settings_difficulty_key">game_difficulty</string>
    <string name="game_settings_show_errors_key">show_error</string>
    <string name="game_settings_show_error">Show errors</string>
    <string name="game_settings_show_error_summary">Highlight rows, columns and squares with errors</string>
    <string name="game_settings_show_current_position_key">show_position</string>
    <string name="game_settings_show_current_position">Highlight Position</string>
    <string name="game_settings_show_current_position_summary">The row, column and square of the current cell get highlighted</string>
    <string name="congratulation">Congratulation you finished the Sudoku</string>
    <string name="congratulation_message">Do you want to start a new one?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="about_other_apps_key">other_apps_key</string>
    <string name="about_other_apps_title">Check out my other apps</string>
    <string name="about_sourcecode_summary">View the sourcecode on my GitHub repo</string>
    <string name="about_sourcecode_title">Sourcecode</string>
    <string name="inventory_warning">No prestored Sudokus of chosen difficulty!</string>
    <string name="inventory_warning_message">Generating a new Sudoku on a higher difficulty could take a couple of seconds and the app might freeze until a new one is generated</string>
    <string name="proceed">proceed</string>
    <string name="cancel">cancel</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="difficulty_settings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
